# psidmlab2

./: .clang-format  .gitignore  .gitmodules  .ignore  CMakeLists.txt  README.md  stepper.h
inc/: blaze_utils.h  common.h  config.h  convolution_functions.h  cosmology.h  debugging.h  domain.h  driver.h  factory.h  fftw.h  fftw_alloc.h  gsl_integration.h  hdf5_file.h  ic.h  interfaces.h  io.h  lapacke_blaze_wrapper.h  logging.h  observables.h  observables_common.h  parameters.h  parameters_fwd.h  poisson_solver.h  potential.h  psidm.h  schroedinger.h  splitting.h  state.h
inc/evolution/: bffp.h  bfsp.h  cap_poisson_potential.h  cap_poisson_potential_delta.h  interaction_external_potential.h  interaction_potential.h  interaction_potential_cap_magnus.h  interaction_potential_cap_trapezodial.h  interaction_potential_magnus.h  interaction_potential_trapezodial.h  kinetic.h  pc_cayley.h  uso_dkd.h  uso_kdk.h  uso_kdk_itp.h
inc/interaction/: fd.h  fft.h  gp.h  nonlocal_gp.h  periodic_convolution.h  poisson_fc.h  poisson_fd.h  poisson_fft.h  poisson_fft_epsilon.h  poisson_radial_free_space.h  screened_poisson_fc.h  screened_poisson_fft.h
inc/poisson/: fd.h  fft.h  gp.h  identity.h
inc/poisson_solvers/: fft_solver.h
inc/schroedinger/: cap_poisson_potential.h  cap_poisson_potential_delta.h  interaction_external_potential.h  interaction_potential.h  kinetic.h  pc_cayley.h  pccn.h  poisson_external_potential.h  poisson_potential.h  splitting.h  uso_dkd.h  uso_kdk.h  uso_kdk_itp.h
install/: bootstrap.sh  conda_env.yaml  psiDMLab.def
modules/: FindBLAS.cmake  FindCBLAS.cmake  FindFFTW3.cmake  FindMKL.cmake  blaze_config.cmake
python/: debug.py  debug_2d.py  plot_delta.py  plot_energy.py  plot_energy_density.py  plot_entropy.py  plot_entropy_density.py  plot_flux.py  plot_force.py  plot_matterpower.py  plot_momentum.py  plot_phasespace.py  plot_potential.py  plot_scalefactor.py  plot_velocity.py  plot_wavefunction.py  plots.py  print_parameters.py  psidmlab.py
run/: harmonic.txt  ic.txt  input.ini  input.json  pot_harmonic.txt  psi_harmonic.txt  psi_harmonic_shift.txt
run/harmonic_static/: generate_osci.py  input.json  potential.txt  psi.txt
run/sinwave_collapse/: generate_sin.py  input.json
run/soliton/: generate_soliton.py  input.json
run/tophat_collapse/: generate_tophat.py  input.json
src/: CMakeLists.txt  common.cc  convolution_functions.cc  cosmology.cc  domain.cc  driver.cc  fft_poisson.cc  fftw.cc  ic.cc  io.cc  main.cc  observables.cc  splitting.cc  state.cc
src/evolution/: bffp.cc  bfsp.cc  cap_poisson_potential.cc  cap_poisson_potential_delta.cc  concrete_splittings.cc  interaction_external_potential.cc  interaction_potential.cc  interaction_potential_cap_magnus.cc  interaction_potential_cap_trapezodial.cc  interaction_potential_magnus.cc  interaction_potential_trapezodial.cc  kinetic.cc  pc_cayley.cc  uso_dkd.cc  uso_kdk.cc  uso_kdk_itp.cc
src/interaction/: fd.cc  fft.cc  gp.cc  nonlocal_gp.cc  periodic_convolution.cc  poisson_convolution.cc  poisson_fc.cc  poisson_fd.cc  poisson_fft.cc  poisson_fft_epsilon.cc  poisson_radial_free_space.cc  screened_poisson_fc.cc  screened_poisson_fft.cc
src/observables/: density_contrast.cc  energy.cc  entropy.cc  force.cc  momentum.cc  peculiar_velocity.cc  phasespace_distribution.cc  potential.cc  powerspectrum.cc  time_increment.cc  wavefunction.cc
src/poisson/: fd.cc  fft.cc  gp.cc  identity.cc
src/potential/poisson/: fft.cc
src/schroedinger/: cap_poisson_potential.cc  cap_poisson_potential_delta.cc  concrete_splittings.cc  interaction_external_potential.cc  interaction_potential.cc  kinetic.cc  pc_cayley.cc  pccn.cc  poisson_external_potential.cc  poisson_potential.cc  splitting.cc  uso_dkd.cc  uso_kdk.cc  uso_kdk_itp.cc
test/: CMakeLists.txt  entropy.cc  numbers.cc  periodic_convolution.cc  phasespace_distribution.cc  poisson_fft.cc  poisson_fft_epsilon.cc  screened_poisson_fft.cc  state.cc  strings.cc
tools/CAMB-0.1.6.1/: CDM__params.ini  CDM_params.ini  camb  params.ini
tools/slurm/: json2slurm.py  json_chunker.py
tools/slurm/templates/: job.sh  submit.sh
